ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-tls-ingress
  namespace: app1
spec:
  tls:
  - hosts:
      - hojintest.shop
    secretName: secret-tls-ingress
  rules:
  - host: hojintest.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
